panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_error_invalid_function_decls.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_error_invalid_function_decls.c
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid function return type `fn() -> int`
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_invalid_function_decls.c:2:1]
   │
 2 │ int a()();
   │ ────┬────  
   │     ╰────── declaration here
───╯

Error: invalid function return type `fn() -> int`
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_invalid_function_decls.c:8:1]
   │
 8 │ int ((*c(void))())();
   │ ──────────┬─────────  
   │           ╰─────────── declaration here
───╯
